# fastsp

./: .gitignore  LICENSE  README.md  README_zh.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: build-windows-nsis.yml  release-windows-nsis.yml
docs/superpowers/plans/: 2026-03-22-indicator-window.md
docs/superpowers/specs/: 2026-03-22-indicator-window-design.md
public/: indicator.html
public/icons/: icon.icns
scripts/: sync-tauri-version.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: asr.rs  audio.rs  http_client.rs  input_listener.rs  lib.rs  llm.rs  main.rs  skills.rs  storage.rs
src/components/: AudioVisualizer.tsx  HistoryList.tsx  MobiusRing.tsx  SettingsModal.tsx  StatusSection.tsx  StreamingOverlay.tsx  TitleBar.tsx
src/lib/: api.ts
